--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <input type="email" placeholder="me@example.com" id="email" required>
               </div>
               <div>
-                <label for="select-where">Where did you hear from us?</label>
+                <label for="select-where">Where did you hear about us?</label>
                 <select id="select-where" required>
                   <option value="">Please choose one option:</option>
                   <option value="friends">Friends and family</option>
@@ -443,7 +443,7 @@
         <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
       </div>
 
-      <div class="adress-col">
+      <div class="address-col">
         <p class="footer-heading">Contact us</p>
         <address class="contacts">
           <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
