--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description"
+    content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal taste and nutritional needs.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/favicon.png">
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/queries.css">
-  <title>Omnifood</title>
+  <title>Omnifood &mdash; Never cook again!</title>
   <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
   <script defer src="js/script.js"></script>
 </head>
@@ -59,8 +64,12 @@
           </div>
         </div>
         <div class="hero-img-box">
-          <img src="img/hero.png" alt="Women enjoying eating food, meals in storage container and food bowls on a table"
-            class="hero-img">
+          <picture>
+            <source srcset="img/hero.webp" type="image/webp">
+            <source srcset="img/hero-min.png" type="image/png">
+            <img src="img/hero-min.png"
+              alt="Women enjoying eating food, meals in storage container and food bowls on a table" class="hero-img">
+          </picture>
         </div>
       </div>
     </section>
