--- a/index.html
+++ b/index.html
@@ -404,18 +404,18 @@
             <h2 class="heading-secondary">Get your first meal for free!</h2>
             <p class="cta-text">Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You
               can cancel or pause anytime. And the first meal is on us!</p>
-            <form class="cta-form" action="#">
+            <form class="cta-form" name="sign-up" netlify>
               <div>
                 <label for="full-name">Full Name</label>
-                <input type="text" placeholder="John Smith" id="full-name" required>
+                <input type="text" placeholder="John Smith" id="full-name" name="full-name" required>
               </div>
               <div>
                 <label for="email">Email address</label>
-                <input type="email" placeholder="me@example.com" id="email" required>
+                <input type="email" placeholder="me@example.com" id="email" name="email" required>
               </div>
               <div>
                 <label for="select-where">Where did you hear about us?</label>
-                <select id="select-where" required>
+                <select name="select-where" id="select-where" required>
                   <option value="">Please choose one option:</option>
                   <option value="friends">Friends and family</option>
                   <option value="youtube">YouTube video</option>
